Corrigindo o codigo e criando autenticação do usuário em shopping-api